[project]
name = "email-triage-openenv"
version = "1.0.0"
description = "A real-world email triage environment for training and evaluating AI agents."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "openai>=2.7.2",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
server = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.openenv]
name = "email-triage-openenv"
version = "1.0.0"
server = "main:app"
inference = "inference.py"
